hard-gists/c70fb69eef42d40bed06/run.log
=== Docker Run Log for c70fb69eef42d40bed06 ===
Started at: Mi 29. Okt 19:56:05 CET 2025

[2025-10-29 19:56:05] START: Running container for c70fb69eef42d40bed06
[2025-10-29 19:56:06] SUCCESS: Container 4eefdbb696339ac6e51a13caa2e23178e449c04b3926ff3aace894e108b7a7c5 started for c70fb69eef42d40bed06
=== Container logs for c70fb69eef42d40bed06 ===
  File "/snippet.py", line 55
    print output
    ^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for c70fb69eef42d40bed06 ===
[2025-10-29 19:56:08] INFO: Container 4eefdbb696339ac6e51a13caa2e23178e449c04b3926ff3aace894e108b7a7c5 has stopped
